# sizing_course

./: .buildinfo  .gitignore  README.md  _config.yml  _toc.yml  genindex.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy_book.yml
_sources/about/: syllabus.md
about/: homepage.html  installation.html  installation.md  syllabus.html  syllabus.md
class/CM1/: 1-objectives-ressources.ipynb  1-objectives_and_ressources.ipynb  2-needs_and_general_methodology.ipynb  3-scenarios_and_design_drivers.ipynb  summary.ipynb  summary.md
class/Lab-elevator/: summary.html
class/Lab-multirotor/: summary.html  summary.md
class/Lab-vega/: 1-sizing_scenarios-student.html  1-sizing_scenarios-student.ipynb  1-sizing_scenarios.html  1-sizing_scenarios.ipynb  2-estimation_models-student.html  2-estimation_models-student.ipynb  2-estimation_models.html  2-estimation_models.ipynb  3-simulation_models-student.html  3-simulation_models-student.ipynb  3-simulation_models.html  3-simulation_models.ipynb  4-evaluation_models-student.html  4-evaluation_models-student.ipynb  4-evaluation_models.html  4-evaluation_models.ipynb  5-sizing_and_optimization-student.html  5-sizing_and_optimization.html  5-sizing_and_optimization.ipynb  6-sizing_and_optimization_with_mdao_using_om-student.html  6-sizing_and_optimization_with_mdao_using_om-student.ipynb  6-sizing_and_optimization_with_mdao_using_om.html  6-sizing_and_optimization_with_mdao_using_om.ipynb  summary.html
class/Lab-watt_project/: 01_CaseStudy.html  01_CaseStudy.ipynb  02_Architecture-Student.html  02_Architecture-Student.ipynb  02_Architecture.html  03_SizingScenarios.html  03_SizingScenarios.ipynb  04_ScalingLaws-Student.html  04_ScalingLaws-Student.ipynb  04_ScalingLaws.html  04_ScalingLaws.ipynb  05_HeatsinkLinearRegression-Student.html  05_HeatsinkLinearRegression-Student.ipynb  05_HeatsinkLinearRegression.html  05_HeatsinkLinearRegression.ipynb  06_SizingCodeInductor.html  06_SizingCodeInductor.ipynb  07_SizingCodeInductor-Surrogate-Copy1.ipynb  07_SizingCodeInductor-Surrogate-Student.html  07_SizingCodeInductor-Surrogate-Student.ipynb  07_SizingCodeInductor-Surrogate.html  07_SizingCodeInductor-Surrogate.ipynb  08_DCDC_converter_sizing_introduction-student.ipynb  08_DCDC_converter_sizing_introduction.html  summary.md  (+4 more)
(+305 files in other folders)
