[tool.black]
    line-length = 100

[tool.poetry]
    name = "sizing_course"
    version = "0.0.0"
    description = "Jupyter Book Sizing Course"
    authors = [
        "Scott DELBECQ <scott.delbecq@isae-supaero.fr>",
        "Marc BUDINGER <marc.budinger@insa-toulouse.fr>",
    ]
    keywords = [
        "sizing",
        "optimization"
    ]
    classifiers = [
        "Environment :: Console",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Education",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.7",
        "Topic :: Scientific/Engineering :: Physics"
    ]
    include = [
        "LICENSE"
    ]

[tool.poetry.dependencies]
python = "^3.8"
cloudpickle="^2"
fast-oad="^1.4.0"
matplotlib="^3.5.0"
scipy="^1.7.0"
openpyxl="^3"
xlrd="^2"
jupyter-book="^0.15.0"
rise="^5.7.1"
jupyterlab-markup-expr="*"
jupyterlab_imarkdown="*"
sympy = "^1.7"
scikit-learn = "^1.0.0"
jupytercards = "^2.1.2"
jupyterquiz = "^2.0.7"
jupyterlab-myst = "^2.1.0"
sphinx="*"
sphinx-exercise="*"
